--- a/getting-started.html
+++ b/getting-started.html
@@ -52,7 +52,7 @@ const thebe_selector_output = ".output, .cell_output"
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Data" href="data.html" />
-    <link rel="prev" title="Executable Book Template" href="index.html" />
+    <link rel="prev" title="Philosophy in Science (Fall 2024)" href="index.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="None">
     
@@ -452,7 +452,7 @@ The following files are required to build the Jupyter Book and <strong>should no
         <i class="fas fa-angle-left"></i>
         <div class="prev-next-info">
             <p class="prev-next-subtitle">previous</p>
-            <p class="prev-next-title">Executable Book Template</p>
+            <p class="prev-next-title">Philosophy in Science (Fall 2024)</p>
         </div>
     </a>
     <a class='right-next' id="next-link" href="data.html" title="next page">
