--- a/course/credit.html
+++ b/course/credit.html
@@ -48,7 +48,7 @@ const thebe_selector_input = "pre"
 const thebe_selector_output = ".output, .cell_output"
 </script>
     <script async="async" src="../_static/sphinx-thebe.js"></script>
-    <link rel="canonical" href="https://shawnrhoads.github.io/executable-notebooks-template/0.course_info/credit.html" />
+    <link rel="canonical" href="https://shawnrhoads.github.io/executable-notebooks-template/course/credit.html" />
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -340,7 +340,7 @@ title="Fullscreen mode"
   <div class="menu-dropdown__content">
     <ul>
       <li>
-        <a href="../_sources/0.course_info/credit.md"
+        <a href="../_sources/course/credit.md"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -428,7 +428,7 @@ title="Print to PDF"
         },
         kernelOptions: {
             kernelName: "python3",
-            path: "./0.course_info"
+            path: "./course"
         },
         predefinedOutput: true
     }
